# CW_Django

./: README.md  pyproject.toml
config/: settings.py  urls.py
newsletter/: admin.py  forms.py  models.py  services.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py  0002_alter_mailing_date_of_first_mail.py  0003_mailing_client_id_mailing_message_id.py  0004_alter_mailing_message_id.py  0005_alter_mailing_options_attempt_mailing_id_and_more.py
newsletter/templates/newsletter/: index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: forms.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: profile.html  recovery_password.html  user_form.html
